# weathr

./: .gitignore  Cargo.toml  flake.nix  result
src/: api.rs  cli.rs  env.rs  main.rs  setup.rs
