[package]
name = "weathr"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.0.0", features = ["derive"] }
dotenv = "0.15"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }

